--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handlebars Translator for Iterable</title>
+    <title>Handlebars Translator</title>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     <style>
         body {
@@ -144,10 +144,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Handlebars Translator for Iterable</h1>
+        <h1>Handlebars Translator</h1>
         
         <div class="note">
-            <strong>Note:</strong> Variables should include a prefix with triple colons (e.g., LFC:::variable_name, mops:::status, hyperloop:::tier)
+            <strong>Note:</strong> If using a list upload, variable should include a prefix with triple colons (e.g., LFC:::variable_name, mops:::variable_name)
         </div>
 
         <div class="input-section">
